# concu-voley

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/Estadisticas/: ConexionPubEstad.cpp  ConexionPubEstad.h  PublicadorDeEstadisticas.cpp  PublicadorDeEstadisticas.h  PublicadorWeb.cpp  PublicadorWeb.h
src/Fifo/: Fifo.cpp  Fifo.h  FifoEscritura.cpp  FifoEscritura.h  FifoLectura.cpp  FifoLectura.h
src/MemoriaCompartida/: LockMemoriaCompartidaCanchas.cpp  LockMemoriaCompartidaCanchas.h  LockMemoriaCompartidaJugadores.cpp  LockMemoriaCompartidaJugadores.h  LockMemoriaCompartidaPersonas.cpp  LockMemoriaCompartidaPersonas.h  LockMemoriaCompartidaResultados.cpp  LockMemoriaCompartidaResultados.h  MemoriaCompartida.h  MemoriaCompartidaCanchas.cpp  MemoriaCompartidaCanchas.h  MemoriaCompartidaJugadores.cpp  MemoriaCompartidaJugadores.h  MemoriaCompartidaPersonas.cpp  MemoriaCompartidaPersonas.h  MemoriaCompartidaResultados.cpp  MemoriaCompartidaResultados.h  Serializados.h
src/Personas/: AdminEntradaPersonas.cpp  AdminEntradaPersonas.h  AdminSalidaPersonas.cpp  AdminSalidaPersonas.h
src/Semaforo/: Semaforo.cpp  Semaforo.h
src/ipc/: LockFile.cpp  LockFile.h  SignalHandler.cpp
src/modelo/: jugador.cpp  jugador.h
src/procesos/: EntradaPersonas.cpp  EntradaPersonas.h  Marea.cpp  Marea.h  Publicador.cpp  Publicador.h  SalidaPersonas.cpp  SalidaPersonas.h  main_process.cpp  participantes.h  partido.cpp  partido.h  principal.cpp  principal.h  torneo.cpp  torneo.h
src/utils/: Destructor.cpp  Destructor.h  Inicializador.cpp  Log.h  (+6 more)
utils/: Opciones.h
